Kubernetes Project/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-deployment
spec:
  selector:
    matchlabels:
        component: server
  template:
    metadata:
        labels:
          component: server
    spec:
      containers:
      - name: simpleapi-server
        image: rinkyjoshy/simple-blog-api-new
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
