Kubernetes Project/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  selector:
    matchlabels:
      component: postgres
  template:
    metadata:
      labels:
          component: postgres
    spec:
      containers:
        - name: postgres-deployment
          image: postgres
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          ports:
            - containerPort: 5432
        volumeMounts:
          - mountPath: /var/lib/postgres/data
            name: postgres-storage
